@@ -58,7 +58,7 @@
             "Safe::Isa" : "0",
             "Syntax::Keyword::Try" : "0",
             "failures" : "0",
-            "perl" : "5.022"
+            "perl" : "v5.20.0"
          }
       },
       "test" : {
@@ -84,7 +84,7 @@
          "web" : "https://github.com/avast/Stor"
       }
    },
-   "version" : "0.10.2",
+   "version" : "1.0.0",
    "x_contributors" : [
       "Jan Seidl <janseidl@volny.cz>",
       "Jan Seidl <seidl@avast.com>",
