@@ -1,0 +1,20 @@
+{
+    "statsite": {                                                                 
+        "host": "STATSITE_HOST",                                       
+        "prefix": "stor.dev",
+        "sample_rate": 0.1
+    },  
+    "storage_pairs": [
+        ["/mnt/data1", "/mnt/data2"],
+        ["/mnt/data3", "/mnt/data4"]
+    ],
+    "s3_enabled" : true,
+    "s3_credentials" : {
+        "access_key" : "S3_ACCESS_KEY",
+        "secret_key" : "S3_SECRET_KEY",
+        "host" : "S3_HOST"
+    },
+    "memcached_servers": ["MEMCACHED_SERVER1"],
+    "secret": "https://mojolicious.org/perldoc/Mojolicious/Guides/FAQ#What-does-Your-secret-passphrase-needs-to-be-changed-mean",
+    "basic_auth": "writer:writer_pass"
+}
