@@ -18,8 +18,8 @@ my $stor = Stor->new(
     storage_pairs        => $cfg->{storage_pairs},
     statsite             => $statsite,
     basic_auth           => $cfg->{basic_auth},
-    hcp_credentials      => $cfg->{hcp_credentials},
-    use_get_from_hcp     => $cfg->{get_from_hcp},
+    s3_credentials       => $cfg->{s3_credentials},
+    s3_enabled           => $cfg->{s3_enabled},
     writable_pairs_regex => $cfg->{writable_pairs_regex} // '.*',
 );
 
